tests/snapshots/integration__integration_tests__config_show__config_show_displays_project_commit_generation_deprecations.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - show
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    PATH: "[PATH]"
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[36mUSER CONFIG[39m  ~/.config/worktrunk/config.toml
[33m▲[39m [33mUser config uses deprecated config sections: [projects."github.com/example/repo".commit-generation] → [projects."github.com/example/repo".commit.generation][39m
[2m↳[22m [2mWrote migrated [90mconfig.toml.new[39m. To apply:[22m
[107m [0m [2m[0m[2m[34mmv[0m[2m [0m[2m[36m--[0m[2m [TEMP_HOME]/.config/worktrunk/config.toml.new [TEMP_HOME]/.config/worktrunk/config.toml
[107m [0m [1mdiff --git a[TEMP_HOME]/.config/worktrunk/config.toml b[TEMP_HOME]/.config/worktrunk/config.toml.new
[107m [0m [1mindex de80729..eb69d44 100644[m
[107m [0m [1m--- a[TEMP_HOME]/.config/worktrunk/config.toml
[107m [0m [1m+++ b[TEMP_HOME]/.config/worktrunk/config.toml.new
[107m [0m [36m@@ -1,4 +1,6 @@[m
[107m [0m  worktree-path = "../{{ repo }}.{{ branch }}"[m
[107m [0m  [m
[107m [0m [31m-[projects."github.com/example/repo".commit-generation][m
[107m [0m [32m+[m[32m[projects."github.com/example/repo".commit][m
[107m [0m [32m+[m
[107m [0m [32m+[m[32m[projects."github.com/example/repo".commit.generation][m
[107m [0m  command = "llm -m gpt-4"[m
[107m [0m worktree-path = [32m"../{{ repo }}.{{ branch }}"
[107m [0m 
[107m [0m [1m[36m[projects."github.com/example/repo".commit-generation]
[107m [0m command = [32m"llm -m gpt-4"

[36mPROJECT CONFIG[39m  _REPO_/.config/wt.toml
[2m↳[22m [2mNot found[22m

[36mSHELL INTEGRATION[39m
[33m▲[39m [33mShell integration not active[39m
[107m [0m Invoked as: [1m[PROJECT_ROOT]/target/debug/wt[22m

[2m○[22m [2mSkipped bash; ~/.bashrc not found[22m
[2m○[22m [2mSkipped zsh; ~/.zshrc not found[22m
[2m○[22m [2mSkipped fish; ~/.config/fish/functions not found[22m

[36mCLAUDE CODE[39m
[2m○[22m [1mclaude[22m CLI not installed

[36mOTHER[39m
[2m○[22m wt: [1m[VERSION][22m
[2m○[22m git: [1m[VERSION][22m
[2m○[22m Hyperlinks: [1minactive[22m
