tests/snapshots/integration__integration_tests__config_show__config_show_suggests_user_config_for_commit_generation.snap
---
source: tests/integration_tests/config_show.rs
info:
  program: wt
  args:
    - config
    - show
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    MOCK_CONFIG_DIR: "[MOCK_CONFIG_DIR]"
    PATH: "[PATH]"
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
    WT_TEST_DELAYED_STREAM_MS: "-1"
    WT_TEST_EPOCH: "1735776000"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[36mUSER CONFIG[39m  ~/.config/worktrunk/config.toml
[107m [0m worktree-path = [32m"../{{ repo }}.{{ branch }}"

[36mPROJECT CONFIG[39m  _REPO_/.config/wt.toml
[33m▲[39m [33mProject config uses deprecated config sections: [commit-generation] → [commit.generation][39m
[2m↳[22m [2mWrote migrated [90mwt.toml.new[39m. To apply:[22m
[107m [0m [2m[0m[2m[34mmv[0m[2m [0m[2m[36m--[0m[2m _REPO_/.config/wt.toml.new _REPO_/.config/wt.toml
[107m [0m [1mdiff --git a_REPO_/.config/wt.toml b_REPO_/.config/wt.toml.new[m
[107m [0m [1mindex 074c30f..e97c84f 100644[m
[107m [0m [1m--- a_REPO_/.config/wt.toml[m
[107m [0m [1m+++ b_REPO_/.config/wt.toml.new[m
[107m [0m [36m@@ -1,2 +1,3 @@[m
[107m [0m [31m-[commit-generation][m
[107m [0m [31m-command = "claude"[m
[107m [0m / No newline at end of file[m
[107m [0m [32m+[m[32m[commit][m
[107m [0m [32m+[m[32m[commit.generation][m
[107m [0m [32m+[m[32mcommand = "claude"[m
[33m▲[39m [33mKey [1mcommit-generation[22m belongs in user config (will be ignored)[39m
[107m [0m [1m[36m[commit-generation]
[107m [0m command = [32m"claude"

[36mSHELL INTEGRATION[39m
[33m▲[39m [33mShell integration not active[39m
[107m [0m Invoked as: [1m[PROJECT_ROOT]/target/debug/wt[22m

[2m○[22m [2mSkipped bash; ~/.bashrc not found[22m
[2m○[22m [2mSkipped zsh; ~/.zshrc not found[22m
[2m○[22m [2mSkipped fish; ~/.config/fish/functions not found[22m

[36mCLAUDE CODE[39m
[2m○[22m [1mclaude[22m CLI not installed

[36mOTHER[39m
[2m○[22m wt: [1m[VERSION][22m
[2m○[22m git: [1m[VERSION][22m
[2m○[22m Hyperlinks: [1minactive[22m
